Minor UI updates

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -6,11 +6,11 @@
                 <h2>Log in <i class="fa fa-sign-in"></i></h2>
             </div>
             <div class="panel-body">
-<?php
-//$this->title = "Log in";
-$this->headTitle('Log in');
-echo $this->form; ?>
-                <?php _d($_SESSION['requestUrl']); ?>
+                <?php
+                //$this->title = "Log in";
+                $this->headTitle('Log in');
+                echo $this->form; ?>
+                <?php // _d($_SESSION['requestUrl']); ?>
             </div>
         </div>
     </div>
