--- a/application/views/scripts/model/thumbnailer.phtml
+++ b/application/views/scripts/model/thumbnailer.phtml
@@ -28,6 +28,7 @@ endforeach;
 else:?>
     <div class="col-md-12">
         <p>No photosets need thumbnails to be set</p>
+        <p><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking'), null, true); ?>" class="btn btn-primary"><i class="fa fa-random fa-fw"></i> Ranking</a></p>
     </div>
 <?php endif; ?>
 
