--- a/application/layouts/scripts/partials/navigation.phtml
+++ b/application/layouts/scripts/partials/navigation.phtml
@@ -2,13 +2,12 @@
 <div class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
+            <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
-                <!--<span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>-->
                 <i class="fa fa-bars"></i> <?php echo $this->notification(); ?>
             </button>
+            <?php endif; ?>
         <a class="navbar-brand" href="<?php echo $this->url(array('controller' => 'index', 'action' => 'index'),null ,true); ?>"><i class="fa fa-code"></i> Goddesses</a>
         </div>
         <div class="navbar-collapse collapse">
@@ -26,9 +25,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
                 <li><a href="<?php echo $this->url(array('controller' => 'auth', 'action' => 'logout'),null ,true); ?>"><i class="fa fa-sign-out fa-fw"></i> Log out</a></li>
-                <?php else: ?>
-                <li><a href="<?php echo $this->url(array('controller' => 'auth', 'action' => 'login'),null ,true); ?>"><i class="fa fa-sign-in fa-fw"></i> Log in</a></li>
-                <?php endif;?>
+                <?php endif; ?>
             </ul>
             
             <?php if (Zend_Auth::getInstance()->hasIdentity()): ?>
