Fixed version number issue.

--- a/application/layouts/scripts/partials/footer.phtml
+++ b/application/layouts/scripts/partials/footer.phtml
@@ -13,7 +13,7 @@ $load = sys_getloadavg();
             <?php echo $this->mode; ?>
         <?php endif; ?>
         </span>
-        <span class="version pull-right">
+        <span class="version">
             v2.2
         </span>
     </div>
