--- a/application/views/scripts/gallery/duplicate.phtml
+++ b/application/views/scripts/gallery/duplicate.phtml
@@ -1,42 +1,67 @@
+<style>
+    .duplicate {
+        border: 1px solid red;
+    }
+    .border-right {
+        
+    }
+</style>
+
 <?php
     $this->title = 'Duplicates';
     $this->subtitle = null;
     $this->headTitle('Duplicates');
 ?>
 
-<?php //_d($this->imageHash); ?>
-
 <?php if ($this->duplicates): ?>
-<div class=row">
 <?php foreach ($this->duplicates as $duplicate): ?>
 
-    <div class="col-md-3 thumbnail">
-        <img src="<?php echo $duplicate['filename1'] ?>" />
-    </div>
-    <div class="col-md-3">
-        <h3><?php echo $duplicate['photosetname1'] ?></h3>
-        <dl class="dl-horizontal">
-            <dt>Width</dt>
-            <dd><?php echo $duplicate['width1'] ?></dd>
-            <dt>Height</dt>
-            <dd><?php echo $duplicate['height1'] ?></dd>
-        </dl>
-    </div>
-    <div class="col-md-3">
+<div class="row">
+    <?php 
+    $photoset1 = $duplicate['photosets']['photoset1'];
+    $photoset2 = $duplicate['photosets']['photoset2'];
+    $duplicateImages1 = $duplicate['images1'];
+    $duplicateImages2 = $duplicate['images2'];
+    ?>
+    
+    <div class="col-md-6 border-right">
+        <h3><?php echo $photoset1->model->name; ?> <small><?php echo $photoset1->name; ?></small></h3>
         
-        <h3><?php echo $duplicate['photosetname2'] ?></h3>
-        <dl class="dl-horizontal">
-            <dt>Width</dt>
-            <dd><?php echo $duplicate['width2'] ?></dd>
-            <dt>Height</dt>
-            <dd><?php echo $duplicate['height2'] ?></dd>
-        </dl>
+        <div class="row">
+        <?php foreach ($photoset1->images as $image): ?>
+        
+        <div class="col-md-2">
+            <a class="thumbnail<?php echo (in_array($image->id, $duplicateImages1)) ? ' duplicate': ''; ?>">
+                <div class="image">
+                    <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($image->filename)), null, true); ?>" />
+                </div>
+            </a>
+        </div>
+        <?php endforeach; ?>
+        </div>
+            
+        <?php //_d($photoset1->toArray()) ?>
     </div>
-    <div class="col-md-3 thumbnail">
-        <img src="<?php echo $duplicate['filename2'] ?>" />
+    
+    <div class="col-md-6">
+        <h3><?php echo $photoset2->model->name; ?> <small><?php echo $photoset2->name; ?></small></h3>
+        
+        <div class="row">
+        <?php foreach ($photoset2->images as $image): ?>
+        
+        <div class="col-md-2">
+            <a class="thumbnail<?php echo (in_array($image->id, $duplicateImages2)) ? ' duplicate': ''; ?>">
+                <div class="image">
+                    <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($image->filename)), null, true); ?>" />
+                </div>
+            </a>
+        </div>
+        <?php endforeach; ?>
+        </div>
+            
+        <?php //_d($photoset2->toArray()) ?>
     </div>
-    <?php //_d($duplicate); ?>
+</div>
     
 <?php endforeach; ?>
-</div>
 <?php endif; ?>
