--- a/application/views/scripts/gallery/duplicate.phtml
+++ b/application/views/scripts/gallery/duplicate.phtml
@@ -48,9 +48,10 @@
                     </div>
                     <div class="actions">
                         <div class="text-center"><?php echo number_format(($image->width * $image->height / 1024 / 1024),1); ?>MP</div>
-                        <?php //if (in_array($image->id, $duplicateImages1)): ?>
+                        <?php if (in_array($image->id, $duplicateImages1)): ?>
                         <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'delete', 'id' => $image->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))) ?>">Delete <i class="fa fa-trash-o"></i></a>
-                        <?php if ($photoset1->id != $photoset2->id): ?>
+                        <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'move', 'id' => $image->id, 'to' => $photoset2->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))); ?>">Move <i class="fa fa-arrow-right"></i></a>
+                        <?php elseif ($photoset1->id != $photoset2->id): ?>
                         <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'move', 'id' => $image->id, 'to' => $photoset2->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))); ?>">Move <i class="fa fa-arrow-right"></i></a>
                         <?php else: ?>
                         <a>&nbsp;</a>
@@ -80,9 +81,10 @@
                     </div>
                     <div class="actions">
                         <div class="text-center"><?php echo number_format(($image->width * $image->height / 1024 / 1024),1); ?>MP</div>
-                        <?php //if (in_array($image->id, $duplicateImages2)): ?>
+                        <?php if (in_array($image->id, $duplicateImages2)): ?>
                         <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'delete', 'id' => $image->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))); ?>" ><i class="fa fa-trash-o"></i> Delete</a>
-                        <?php if ($photoset1->id != $photoset2->id): ?>
+                        <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'move', 'id' => $image->id, 'to' => $photoset1->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))); ?>" ><i class="fa fa-arrow-left"></i> Move</a>
+                        <?php elseif ($photoset1->id != $photoset2->id): ?>
                         <a href="<?php echo $this->url(array('controller' => 'image', 'action' => 'move', 'id' => $image->id, 'to' => $photoset1->id, 'referer' => urlencode($_SERVER['REQUEST_URI']))); ?>" ><i class="fa fa-arrow-left"></i> Move</a>
                         <?php else: ?>
                         <a>&nbsp;</a>
