--- a/application/layouts/scripts/partials/navigation.phtml
+++ b/application/layouts/scripts/partials/navigation.phtml
@@ -16,7 +16,8 @@
                 <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'add', 'page' => null, 'search' => null, 'order' => null), null, true);?>"><i class="fa fa-plus fa-fw"></i> Add Model</a></li>
                 <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'ranking'), null, true); ?>"><i class="fa fa-random fa-fw"></i> Ranking</a></li>
                 <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'stats'), null, true); ?>"><i class="fa fa-bar-chart-o fa-fw"></i> Stats</a></li>
-                <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'thumbnailer'), null, true); ?>"><i class="fa fa-picture-o fa-fw"></i><?php echo $this->notification('thumbnail'); ?> Thumbnailer</a></li>
+                <li><a href="<?php echo $this->url(array('controller' => 'model', 'action' => 'thumbnailer'), null, true); ?>"><i class="fa fa-picture-o fa-fw"></i><?php echo $this->notification('thumbnail'); ?> Thumbnails</a></li>
+                <li><a href="<?php echo $this->url(array('controller' => 'gallery', 'action' => 'duplicate'), null, true); ?>"><i class="fa fa-picture-o fa-fw"></i><?php echo $this->notification('duplicate'); ?> Duplicates</a></li>
                 <li><a href="<?php echo $this->url(array('controller' => 'web-resource', 'action' => 'index'), null, true); ?>"><i class="fa fa-chain fa-fw"></i> Web Resources</a></li>
                 <?php endif; ?>
             </ul>
