--- a/application/views/scripts/model/ranking.phtml
+++ b/application/views/scripts/model/ranking.phtml
@@ -7,16 +7,16 @@
 	<div class="row">
             <?php
                 foreach ($this->models as $model):
-                    $photoset = $model->getRandomPhotoset();
+                    $photoset = God_Model_Model::getRandomPhotoset($model['ID']);
             ?>
             <div class="col-xs-6">
                 <div class="thumbnail">
                     <div class="image medium">
-                        <a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'view', 'id'=>$model->ID, 'photoset' => $photoset->id)); ?>">
+                        <a href="<?php echo $this->url(array('controller'=>'gallery', 'action'=>'view', 'id'=>$model['ID'], 'photoset' => $photoset->id)); ?>">
                             <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'medium', 'id'=>rawurlencode($photoset->thumbnail), 'page' => null)); ?>" />
                         </a>
                         <div class="name">
-                            <a href="<?php echo $this->url(array('action' => 'view', 'id' => $model->ID)); ?>"><?php echo $model->getName(); ?></a>
+                            <a href="<?php echo $this->url(array('action' => 'view', 'id' => $model['ID'])); ?>"><?php echo God_Model_Model::getPrimaryName($model['ID']); ?></a>
                         </div>
                     </div>
                     <div class="caption">
@@ -25,16 +25,16 @@
                         </strong>
 
                         <div class="pull-left">
-                            <i class="fa fa-thumbs-o-up"></i> <?php echo $model->ranking; ?> <span class="badge"><i class="fa fa-star"></i> <?php echo $this->modelCount; ?></span>&nbsp;
+                            <i class="fa fa-thumbs-o-up"></i> <?php echo $model['ranking']; ?> <span class="badge"><i class="fa fa-star"></i> <?php echo $this->modelCount; ?></span>&nbsp;
                         </div>
                         <div class=""pull-left">
-                            <i class="fa fa-picture-o"></i> <?php echo count($model->photosets); ?>&nbsp;
+                            <i class="fa fa-picture-o"></i> <?php echo count($model['photosets']); ?>&nbsp;
                         </div>
                         <form action="<?php echo $this->url(array('action' => 'ranking')); ?>" method="post">
                             <div class="checkbox">
                                 <label>
-                                <input type="checkbox" id="search<?php echo $model->ID; ?>" name="search"<?php echo $model->search ? ' checked="checked"' : ''; ?> />
-                                <i class="fa fa-search"></i> <?php echo $this->date($model->datesearched); ?>
+                                <input type="checkbox" id="search<?php echo $model['ID']; ?>" name="search"<?php echo $model['search'] ? ' checked="checked"' : ''; ?> />
+                                <i class="fa fa-search"></i> <?php echo $this->date($model['datesearched']); ?>
                                 </label>
                                 
                             </div>
@@ -43,8 +43,8 @@
                             <a href="weblinks.php?action=2&model={$link.id}">WT = {$link.webthumbs}</a>
                             <a href="weblinks.php?action=6&model={$link.id}">WI = {$link.webimages}</a>
                              -->
-                            <input type="hidden" name="model_id" value="<?php echo $model->ID; ?>" />
-                            <input type="hidden" name="model_ranking" value="<?php echo $model->ranking; ?>" />
+                            <input type="hidden" name="model_id" value="<?php echo $model['ID']; ?>" />
+                            <input type="hidden" name="model_ranking" value="<?php echo $model['ranking']; ?>" />
                             <button type="submit" class="btn btn-primary btn-block"><i class="fa fa-thumbs-o-up"></i> God Like!</button>
                         </form>
 
