--- a/application/views/scripts/model/view.phtml
+++ b/application/views/scripts/model/view.phtml
@@ -13,7 +13,7 @@
 
     <?php foreach ($this->photosets as $photoset): ?>
     <div class="col-xs-4 col-sm-3 col-md-2">
-        <a href="<?php echo $photoset->manual_thumbnail ? $this->url(array('controller'=>'gallery', 'action'=>'view', 'photoset' => $photoset['id']), null, true) : $this->url(array('controller'=>'gallery', 'action'=>'thumbnail', 'photoset' => $photoset['id']), null, true); ?>" class="thumbnail">
+        <a href="<?php echo $photoset['manual_thumbnail'] ? $this->url(array('controller'=>'gallery', 'action'=>'view', 'photoset' => $photoset['id']), null, true) : $this->url(array('controller'=>'gallery', 'action'=>'thumbnail', 'photoset' => $photoset['id']), null, true); ?>" class="thumbnail">
             <div class="image <?php echo $photoset['manual_thumbnail'] ? '' : 'autothumb' ?>">
                 <img src="<?php echo $this->url(array('controller'=>'image', 'action'=>'thumbnail', 'id'=>rawurlencode($photoset['thumbnail']))); ?>" />
                 <div class="name">
