--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -80,7 +80,7 @@ function renderpath ($url, $path) {
 
     if (preg_match("~(\/).~", $path)) {
         $urlParts = parse_url($url);
-        return $urlParts['scheme'].'://'.$urlParts['host'].$path;
+        return $urlParts['scheme'].'://'.$urlParts['host'].'/'.$path;
     }
 
     return $url.$path;
