--- a/application/views/scripts/web-url/index.phtml
+++ b/application/views/scripts/web-url/index.phtml
@@ -24,42 +24,46 @@
 
 <?php foreach ($this->webUrls as $url): ?>
 <div class="row">
-    <div class="col-md-1 col-sm-1 col-xs-2"><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'test', 'id' => $url->id), 'default', true); ?>"><?php echo $url->id; ?></a></div>
-    <div class="col-md-4 col-sm-5 col-xs-10"><?php echo $url->url; ?> <a href="<?php echo $url->url; ?>" target="_blank"><i class="fa fa-external-link"></i></a></div>
-    <div class="col-md-1 col-sm-1 col-xs-2"><?php echo $url->httpStatusCode; ?></div>
+    <div class="col-md-1 col-sm-1 col-xs-2"><a href="<?php echo $this->url(array('controller' => 'web-url', 'action' => 'test', 'id' => $url['id']), 'default', true); ?>"><?php echo $url['id']; ?></a></div>
+    <div class="col-md-4 col-sm-5 col-xs-10"><?php echo $url['url']; ?> <a href="<?php echo $url['url']; ?>" target="_blank"><i class="fa fa-external-link"></i></a></div>
+    <div class="col-md-1 col-sm-1 col-xs-2"><?php echo $url['httpStatusCode']; ?></div>
     <div class="col-md-2 col-sm-2 col-xs-5">
         <select>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_NEW_URL; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_NEW_URL ? 'selected="selected"' : ''; ?>>New Url</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_GET_THUMBNAILS; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_GET_THUMBNAILS ? 'selected="selected"' : ''; ?>>Get Thumbnails</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_THUMBNAIL_ISSUE; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_THUMBNAIL_ISSUE ? 'selected="selected"' : ''; ?>>Thubmnail Issue</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_GOT_THUMBNAILS; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_GOT_THUMBNAILS ? 'selected="selected"' : ''; ?>>Got Thumbnails</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_GET_IMAGES; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_GET_IMAGES ? 'selected="selected"' : ''; ?>>Get Images</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_GOT_IMAGES; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_GOT_IMAGES ? 'selected="selected"' : ''; ?>>Got Images</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_READY_TO_DOWNLOAD; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_READY_TO_DOWNLOAD ? 'selected="selected"' : ''; ?>>Ready for Download</option>
-            <option value="<?php echo God_Model_WebURLTable::ACTION_DOWNLOADED; ?>" <?php echo $url->action == God_Model_WebURLTable::ACTION_DOWNLOADED ? 'selected="selected"' : ''; ?>>Downloaded</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_NEW_URL; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_NEW_URL ? 'selected="selected"' : ''; ?>>New Url</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_GET_THUMBNAILS; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_GET_THUMBNAILS ? 'selected="selected"' : ''; ?>>Get Thumbnails</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_THUMBNAIL_ISSUE; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_THUMBNAIL_ISSUE ? 'selected="selected"' : ''; ?>>Thubmnail Issue</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_GOT_THUMBNAILS; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_GOT_THUMBNAILS ? 'selected="selected"' : ''; ?>>Got Thumbnails</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_GET_IMAGES; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_GET_IMAGES ? 'selected="selected"' : ''; ?>>Get Images</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_GOT_IMAGES; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_GOT_IMAGES ? 'selected="selected"' : ''; ?>>Got Images</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_READY_TO_DOWNLOAD; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_READY_TO_DOWNLOAD ? 'selected="selected"' : ''; ?>>Ready for Download</option>
+            <option value="<?php echo God_Model_WebURLTable::ACTION_DOWNLOADED; ?>" <?php echo $url['action'] == God_Model_WebURLTable::ACTION_DOWNLOADED ? 'selected="selected"' : ''; ?>>Downloaded</option>
         </select>
-        <span class="hidden-sm hidden-xs"><?php echo $url->action; ?></span>
+        <span class="hidden-sm hidden-xs"><?php echo $url['action']; ?></span>
     </div>
     <div class="col-md-2 col-sm-2 col-xs-5">
-        <?php if ($url->ModelNameWebURL): ?>
+        <?php if ($url['ModelNameWebURL']): ?>
         <ul class="list-unstyled">
-        <?php foreach ($url->ModelNameWebURL as $modelNameLink): ?>
-            <li><a href="<?php echo $this->url(array('controller'=>'web-url', 'action'=>'index', 'modelid' => $modelNameLink->modelName->model->ID), 'default', true); ?>"><?php echo $modelNameLink->modelName->model->getName();?></a></li>
+        <?php foreach ($url['ModelNameWebURL'] as $modelNameLink): ?>
+            <li><a href="<?php echo $this->url(array('controller'=>'web-url', 'action'=>'index', 'modelid' => $modelNameLink['modelName']['ID']), 'default', true); ?>"><?php echo $modelNameLink['modelName']['name']; ?></a></li>
         <?php endforeach; ?>
         </ul>
         <?php endif; ?>
     </div>
-    <div class="col-md-1 hidden-sm hidden-xs"><?php echo $url->linked; ?></div>
-    <div class="col-md-1 col-sm-1 col-xs-12"><?php echo $this->date($url->dateCreated, Coda_View_Helper_Date::DATETIME); ?></div>
+    <div class="col-md-1 hidden-sm hidden-xs"><?php echo $url['linked']; ?></div>
+    <div class="col-md-1 col-sm-1 col-xs-12"><?php echo $this->date($url['dateCreated'], Coda_View_Helper_Date::DATETIME); ?></div>
     
     <?php
-        $thumbnails = unserialize($url->thumbnails);
-        if ($thumbnails):
+    
+        if ($thumbnails = unserialize($url['thumbnails'])):
+            
+            if ($url['links']) {
+                $thumbnails = unserialize($url['links']);
+            }
     ?>
     <div class="col-md-12">
         <?php foreach($thumbnails as $thumbnail): ?>
-        <a class="col-lg-1 col-sm-2 col-xs-3" href="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>">
-            <img src="/image/external?referer=<?php echo $url->url; ?>&url=<?php echo renderpath($url->url, $thumbnail); ?>&width=80" />
+        <a class="col-lg-1 col-sm-2 col-xs-3" href="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo renderpath($url['url'], $thumbnail); ?>">
+            <img src="/image/external?referer=<?php echo $url['url']; ?>&url=<?php echo renderpath($url['url'], $thumbnail); ?>&width=80" />
         </a>
         <?php endforeach; ?>
     </div>
